# PersonalStorage.SDK.OSS

./: README.md
scripts/: build.sh
sdk/: CMakeLists.txt  PersonalStorage.SDK.OSS.pc.in
sdk/common/: CMakeLists.txt  Log.cpp  Log.hpp
sdk/include/: CloudDisk.hpp  CloudErrCode.hpp  CloudFile.hpp  CloudFileSystem.hpp  CloudMode.hpp  CloudPartition.hpp  ErrCode.hpp  PersonalStorage.SDK.OSS.hpp
sdk/src/: AliCloudDiskImpl.cpp  AliCloudDiskImpl.hpp  AliCloudFileSystemImpl.cpp  AliCloudFileSystemImpl.hpp  CMakeLists.txt  CloudDisk.cpp  CloudDisk.hpp  CloudErrCode.hpp  CloudFile.cpp  CloudFile.hpp  CloudFileSystem.cpp  CloudPartition.cpp  Elastos.SDK.CloudStorage.cpp  Elastos.SDK.CloudStorage.hpp
sdk/test/: CMakeLists.txt  CSTest.cpp
